# src/roles/dto/update-roles.dto.ts
@@ -1,0 +1,4 @@
+import { PartialType } from '@nestjs/swagger';
+import { CreateRoleDto } from './create-roles.dto';
+
+export class UpdateRoleDto extends PartialType(CreateRoleDto) {}
